--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "cf-sample-app-node",
+  "description": "A sample Node.js application to run on Cloud Foundry out of the box",
+  "keywords": [
+    "cloud-foundry"
+  ],
   "version": "0.0.0",
   "private": true,
+  "author": "Tobias Fuhrimann <tobias.fuhrimann@swisscom.com>",
+  "license": "ISC",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -13,5 +19,15 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "engines": {
+    "node": ">=0.12.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/swisscom/cf-sample-app-node.git"
+  },
+  "bugs": {
+    "url": "https://github.com/swisscom/cf-sample-app-node/issues"
   }
 }
