--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "cookie-parser": "~1.4.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "pug": "^2.0.0-alpha3",
     "serve-favicon": "~2.3.0"
   },
   "engines": {
