--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "keywords": [
     "cloud-foundry"
   ],
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "author": "Tobias Fuhrimann <tobias.fuhrimann@swisscom.com>",
   "license": "ISC",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node src"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "morgan": "~1.7.0",
-    "pug": "^2.0.0-alpha6",
-    "serve-favicon": "~2.3.0"
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.2.0",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
+    "pug": "^2.0.0-beta6",
+    "serve-favicon": "^2.3.0"
   },
   "engines": {
-    "node": ">=4.4.2"
+    "node": ">=6"
   },
   "repository": {
     "type": "git",
