--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "debug": "^2.6.6",
     "express": "^4.15.0",
     "morgan": "^1.8.1",
-    "pug": "^2.0.0-beta6",
+    "pug": "^2.0.0-beta.12",
     "serve-favicon": "^2.4.2"
   },
   "engines": {
