--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "start": "node src"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "pug": "^2.0.0-rc.4",
-    "serve-favicon": "^2.4.5"
+    "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0"
   },
   "engines": {
     "node": ">=8"
