--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "pug": "^2.0.3",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "dotenv": "6.1.0"
   },
   "engines": {
     "node": ">=8"
