--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node src"
   },
   "dependencies": {
+    "sleep": "^6.1.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
